bugfix css single country for dark mode context

--- a/rest-countries/src/components/Main/Country/Country.css
+++ b/rest-countries/src/components/Main/Country/Country.css
@@ -15,6 +15,14 @@
   justify-content: space-around;
 }
 
+.country-info-left-dark {
+  color: #ffffff;
+}
+
+.country-info-right-dark {
+  color: #ffffff;
+}
+
 .country-info-img,
 .country-info {
   width: 70%;
